--- a/flaskps/templates/home/login_navbar.html
+++ b/flaskps/templates/home/login_navbar.html
@@ -21,8 +21,8 @@
         <!-- Links -->
         <!-- Links -->
         <ul class="navbar-nav ml-5 text-right">
-            <li class="ml-5 text-right">
-                <a href="/iniciar_sesion" type="button" class="btn btn-light ml-auto btn-rounded black3 px-5">Iniciar Sesión</a>
+            <li class="ml-5">
+                <button class="btn btn-primary btn-rounded" onclick="window.location.href='/iniciar_sesion'">Iniciar Sesión</button>
             </li>
         </ul>
         <!-- Links -->
