--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -104,15 +104,28 @@
                             <li class="list-group-item menuItem" onclick="menuSwitch(2)"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</li>
                         </ul>
                     </div>
+                    
                 </aside>
                 <!-- /.Menu -->
                 <!-- Columna full width -->
                 <div class="col p-0">
                     <!-- Navegación -->
-                    <nav class="navbar navbar-expand-lg navbar-light navbar-static-top shadow-sm bg-white uns">
+                    <nav class="navbar navbar-expand-lg navbar-light navbar-static-top shadow-sm bg-white uns px-5">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-link ml-3">
-                                Panel
+                            <li class="nav-link">
+                                Panel de administración
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle black4" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                    <i class="fas fa-user black4 mr-2"></i><span class="black4">User</span>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-right dropdown-default"
+                                aria-labelledby="navbarDropdownMenuLink-333">
+                                <a class="dropdown-item" href="#">Cerrar sesión</a>
+                                </div>
                             </li>
                         </ul>
                     </nav>
