--- a/flaskps/templates/auth/panel_components/empleados.html
+++ b/flaskps/templates/auth/panel_components/empleados.html
@@ -28,7 +28,9 @@
                             <td>{{row.apellido}}</td>
                             <td>{{row.nombre}}</td>
                             <td>{{row.fecha_nac}}</td>
-                            <td><span class="min_loc">{{row.localidad_id}}</span></td>
+                            <td>
+                                <span class="min_loc">{{row.localidad_id}}</span>
+                            </td>
                             <td>{{row.domicilio}}</td>
                             <td>{{row.genero}}</td>
                             <td>
