--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -112,19 +112,18 @@
                     <!-- Navegación -->
                     <nav class="navbar navbar-expand-lg navbar-light navbar-static-top shadow-sm bg-white uns px-5">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-link">
+                            <li class="nav-link nav-link-panel">
                                 Panel de administración
                             </li>
                         </ul>
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle black4" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+                                <a class="nav-link nav-link-nombre dropdown-toggle black4" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-user black4 mr-2"></i><span class="black4">User</span>
+                                    <i class="fas fa-user black4 mr-2"></i><span class="black4">{{nombre}} {{apellido}}</span>
                                 </a>
-                                <div class="dropdown-menu dropdown-menu-right dropdown-default"
-                                aria-labelledby="navbarDropdownMenuLink-333">
-                                <a class="dropdown-item" href="#">Cerrar sesión</a>
+                                <div class="dropdown-menu dropdown-menu-right dropdown-default py-2" aria-labelledby="navbarDropdownMenuLink-333">
+                                    <a class="dropdown-item" href="/cerrar_sesion"><i class="fas fa-sign-out-alt black5 mr-2 my-0"></i><b>Salir</b></a>
                                 </div>
                             </li>
                         </ul>
