--- a/flaskps/templates/auth/panel_components/estado_sitio.html
+++ b/flaskps/templates/auth/panel_components/estado_sitio.html
@@ -1,12 +1,12 @@
 <div class="subItem">
-    <div class="row">
-        <div class="col-md-3 pt-2">
-            <form action="{{ url_for('change_site_status') }}" method="POST">
-                <div class="card">
-                    <div class="card-header">
-                        <h1 class="h5 my-0">Estado del sitio</h1>
-                    </div>
-                    <div class="card-body p-4">
+    <div class="row row-eq-height">
+        <div class="col-md-3 mb-4">
+            <div class="card h-100">
+                <div class="card-header">
+                    <h1 class="h5 my-0">Estado del sitio</h1>
+                </div>
+                <div class="card-body p-4">
+                    <form action="{{ url_for('change_site_status') }}" method="POST">
                         <div class="row">
                             <div class="col-md-12 mb-3">
                                 <select name="estado_sitio" class="browser-default custom-select">
@@ -23,17 +23,17 @@
                                 <button type="submit" class="btn btn-primary">Guardar</button>                                             
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
-            </form>
+            </div>
         </div>
-        <div class="col-md-2 pt-2">
-            <form action="{{ url_for('change_site_status') }}" method="POST">
-                <div class="card">
-                    <div class="card-header">
-                        <h1 class="h5 my-0">Paginación</h1>
-                    </div>
-                    <div class="card-body p-4">
+        <div class="col-md-2 mb-4">
+            <div class="card h-100">
+                <div class="card-header">
+                    <h1 class="h5 my-0">Paginación</h1>
+                </div>
+                <div class="card-body p-4">
+                    <form action="{{ url_for('change_site_status') }}" method="POST">
                         <div class="row">
                             <div class="col-md-12 mb-3">
                                 <input type="number" min="0" name="paginacion" class="form-control" value="{{ infositio[0].paginacion }}">
@@ -42,9 +42,23 @@
                                 <button type="submit" class="btn btn-primary">Guardar</button>                                             
                             </div>
                         </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row row-eq-height">
+        <div class="col-md-3 mb-4">
+            <div class="card h-100">
+                <div class="card-header">
+                    <h1 class="h5 my-0">Ir al sitio de escuela orquesta</h1>
+                </div>
+                <div class="card-body p-4">
+                    <div class="row justify-content-center">
+                        <button class="btn btn-primary btn-rounded" onclick="window.location.href='/'">Ver sitio</button>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
