--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -42,6 +42,7 @@
                             }
                         }   
                     }
+
                 }
 
                 //Llamado a la API de localidades
@@ -101,7 +102,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item menuItem" onclick="menuSwitch(0)"><i class="fas fa-user-tag black3 mr-2"></i>Empleados</li>
                             <li class="list-group-item menuItem" onclick="menuSwitch(1)"><i class="fas fa-users black3 mr-2"></i>Alumnos</li>
-                            {% if rol == administrador %}
+                            {% if rol.nombre == 'administrador' %}
                             <li class="list-group-item menuItem" onclick="menuSwitch(2)"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</li>
                             {% endif %}
                         </ul>
@@ -158,7 +159,7 @@
                         <!--/.Modificar alumnos -->
 
                         <!-- Admin -->
-                        {% if rol == administrador %}
+                        {% if rol.nombre == 'administrador' %}
                         {% include 'auth/panel_components/estado_sitio.html' %}
                         {% endif %}
                         <!--/.Admin -->
