--- a/flaskps/templates/auth/panel_components/alumnos.html
+++ b/flaskps/templates/auth/panel_components/alumnos.html
@@ -1,59 +1,120 @@
     <div class="subItem">
         <div class="row">
+            {% for p in permisos %}
+            {% if p.nombre == 'estudiante_new' %}
             <div class="col-md-12 mb-3">
                 <button type="button" class="btn btn-success pull-right" data-toggle="modal" data-target="#studentCreate">
                     <i class="fas fa-user-plus mr-2"></i> Nuevo Estudiante
                 </button>
             </div>
-            <div class="col-md-12">
+            {% endif %}
+            {% endfor %}
+            <div class="col-md-8">
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <!-- Row Titulos -->
                         <tr>
                             <th>Apellido</th>
                             <th>Nombre</th>
-                            <th>Fecha de Nacimiento</th>
                             <th>Localidad</th>
                             <th>Nivel</th>
-                            <th>Domicilio</th>
-                            <th>Género</th>
                             <th>Escuela</th>
-                            <th>Documento</th>
-                            <th>Teléfono</th>
-                            <th>Barrio</th>
-                            <th>Acciones</th>
+                            <th class="text-center">Acciones</th>
                         </tr>
                         <!-- Row Estudiantes -->
                         {% for row in students %}
                         <tr>
                             <td>{{row.apellido}}</td>
                             <td>{{row.nombre}}</td>
-                            <td>{{row.fecha_nac}}</td>
                             <td><span class="min_loc">{{row.localidad_id}}</span></td>
-                            <td>{{row.nivel}}</td>
-                            <td>{{row.domicilio}}</td>
-                            <td>{{row.genero}}</td>
                             <td>{{row.escuela}}</td>
                             <td>
                                 <span class="min_dni font-1">{{row.tipo_doc_id}}</span>
                                 {{row.numero}}
                             </td>
-                            <td>{{row.tel}}</td>
-                            <td>{{row.barrio}}</td>
-                            <td>
-                                <a href="/update_student/{{row.id}}" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#studentEdit{{row.id}}"><i class="fas fa-edit mr-2"></i>Editar</a>
+                            <td class="text-center">
                                 {% for p in permisos %}
-                                {% if p == estudiante_destroy %}
+                                {% if p.nombre == 'estudiante_show' %}
+                                <!-- Ver estudiante -->
+                                <a class="btn btn-success btn-sm" data-toggle="modal" data-target="#studentShow{{row.id}}"><i class="fas fa-eye mr-2"></i>Ver</a>
+                                {% endif %}
+                                {% endfor %}
+                                {% for p in permisos %}
+                                {% if p.nombre == 'estudiante_update' %}
+                                <!-- Modificar estudiante -->
+                                <a href="/update_student/{{row.id}}" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#studentEdit{{row.id}}"><i class="fas fa-edit mr-2"></i>Editar</a>
+                                {% endif %}
+                                {% endfor %}
+                                {% for p in permisos %}
+                                {% if p.nombre == 'estudiante_destroy' %}
+                                <!-- Eliminar estudiante -->
                                 <a href="/delete_student/{{row.id}}" class="btn btn-danger btn-sm" onclick="return confirm('Are You Sure For Delete?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
                                 {% endif %}
                                 {% endfor %}
                             </td>
                         </tr>
+                        {% for p in permisos %}
+                        {% if p.nombre == 'estudiante_show' %}
+                        <div id="studentShow{{row.id}}" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Estudiante</h4>
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <p class="mb-2">Nombre: {{row.nombre}}</p>
+                                                <p class="mb-2">Apellido: {{row.apellido}}</p>
+                                                <p class="mb-2">Fecha de nacimiento: {{row.fecha_nac}}</p>
+                                                <p class="mb-2">Localidad: {{row.localidad_id}}</p>
+                                                <p class="mb-2">
+                                                    {% for nivel in niveles %}
+                                                    {% if nivel.id == row.nivel_id %}
+                                                        Nivel: {{nivel.nombre}}
+                                                    {% endif %}
+                                                    {% endfor %}
+                                                </p>
+                                                <p class="mb-2">Domicilio: {{row.domicilio}}</p>
+                                                <p class="mb-2">
+                                                    {% for genero in generos %}
+                                                    {% if genero.id == row.genero_id %}
+                                                        Genero: {{genero.nombre}}
+                                                    {% endif %}
+                                                    {% endfor %}
+                                                </p>
+                                                <p class="mb-2">
+                                                    {% for escuela in escuelas %}
+                                                    {% if escuela.id == row.escuela_id %}
+                                                        Escuela: {{escuela.nombre}}
+                                                    {% endif %}
+                                                    {% endfor %}
+                                                </p>
+                                                <p class="mb-2">Documento: {{row.numero}}</p>
+                                                <p class="mb-2">Telefono: {{row.tel}}</p>
+                                                <p class="mb-2">
+                                                    {% for barrio in barrios %}
+                                                    {% if barrio.id == row.barrio_id %}
+                                                        Barrio: {{barrio.nombre}}
+                                                    {% endif %}
+                                                    {% endfor %}
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                        {% for p in permisos %}
+                        {% if p.nombre == 'estudiante_update' %}
                         <div id="studentEdit{{row.id}}" class="modal fade" role="dialog">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">Actualizar</h4>
+                                        <h4 class="modal-title">Editar</h4>
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
@@ -184,12 +245,16 @@
                                 </div>
                             </div>
                         </div>
+                        {% endif %}
+                        {% endfor %}
                         {% endfor %}
                         </tbody>
                     </table>
                 </div>
             </div>
             
+            {% for p in permisos %}
+            {% if p.nombre == 'estudiante_new' %}
             <!-- Modal -->
             <div id="studentCreate" class="modal fade" role="dialog">
                 <div class="modal-dialog">
@@ -309,6 +374,9 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
+            {% endfor %}
+            
         </div>
         <script type="text/javascript" src="{{url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
         <script type="text/javascript" src="{{url_for('static', filename = 'js/bootstrap.min.js')}}"></script>
