--- a/flaskps/templates/home/login_navbar.html
+++ b/flaskps/templates/home/login_navbar.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="main-navbar navbar navbar-expand-lg navbar-light no-shadow py-5 px-5 uns fixed-top">
+<nav class="home-navbar main-navbar navbar navbar-expand-lg navbar-light no-shadow py-5 px-5 uns fixed-top">
     <!-- Navbar brand -->
     <a class="navbar-brand black3 px-5" href="/">
         <img src="{{ url_for('static', filename='img/logo-black.png') }}" class="nav-logo" alt="logo-de-orquesta-escuela-berisso">
@@ -10,18 +10,14 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <!-- Collapsible content -->
-    <div class="collapse navbar-collapse mb-auto row justify-content-center" id="basicExampleNav">
+    <div class="collapse navbar-collapse mb-auto row" id="basicExampleNav">
         <!-- Links -->
         <ul class="navbar-nav mr-5">
             <li class="nav-item"><a href="/">Programación</a></li>
             <li class="nav-item"><a href="/">Novedades</a></li>
             <li class="nav-item"><a href="/">Instrumentos</a></li>
             <li class="nav-item"><a href="/">Orquestas</a></li>
-        </ul>
-        <!-- Links -->
-        <!-- Links -->
-        <ul class="navbar-nav ml-5 text-right">
-            <li class="ml-5">
+            <li class="nav-item home-login-button">
                 <button class="btn btn-primary btn-rounded" onclick="window.location.href='/iniciar_sesion'">Iniciar Sesión</button>
             </li>
         </ul>
