crud usuarios excepto DELETE

--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -5,7 +5,7 @@
             //Carga el menu por defecto en la primer opcion
             window.onload = load;
             function load() {
-                menuSwitch(0);
+                menuSwitch(2);
                 
                 //Llamado a la API de localidades
                 var xmlhttp = new XMLHttpRequest();
@@ -100,10 +100,11 @@
                             <img src="{{ url_for('static', filename='img/logo-dark.png') }}" class="panel-logo" alt="logo-de-orquesta-escuela-berisso">
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item menuItem" onclick="menuSwitch(0)"><i class="fas fa-user-tag black3 mr-2"></i>Empleados</li>
-                            <li class="list-group-item menuItem" onclick="menuSwitch(1)"><i class="fas fa-users black3 mr-2"></i>Alumnos</li>
+                            <li class="list-group-item menuItem" onclick="menuSwitch(0)"><i class="fas fa-user-friends black3 mr-2"></i>Empleados</li>
+                            <li class="list-group-item menuItem" onclick="menuSwitch(1)"><i class="fas fa-user-graduate black3 mr-2"></i>Alumnos</li>
                             {% if rol.nombre == 'administrador' %}
-                            <li class="list-group-item menuItem" onclick="menuSwitch(2)"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</li>
+                            <li class="list-group-item menuItem" onclick="menuSwitch(2)"><i class="fas fa-users black3 mr-2"></i>Usuarios</li>
+                            <li class="list-group-item menuItem" onclick="menuSwitch(3)"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</li>
                             {% endif %}
                         </ul>
                     </div>
@@ -160,6 +161,7 @@
 
                         <!-- Admin -->
                         {% if rol.nombre == 'administrador' %}
+                        {% include 'auth/panel_components/usuarios.html' %}
                         {% include 'auth/panel_components/estado_sitio.html' %}
                         {% endif %}
                         <!--/.Admin -->
