--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -122,10 +122,10 @@
                         </ul>
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item dropdown">
-                                <a class="nav-link nav-link-nombre dropdown-toggle black4" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+                                <i class="nav-link nav-link-nombre dropdown-toggle black4 cursor-p" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-user black4 mr-2"></i><span class="black4">{{nombre}} {{apellido}}</span>
-                                </a>
+                                </i>
                                 <div class="dropdown-menu dropdown-menu-right dropdown-default py-2" aria-labelledby="navbarDropdownMenuLink-333">
                                     <a class="dropdown-item" href="/cerrar_sesion"><i class="fas fa-sign-out-alt black5 mr-2 my-0"></i><b>Salir</b></a>
                                 </div>
@@ -138,7 +138,7 @@
                     <div class="container-fluid w-100 p-5 m-0">
                         <div class="row">
                             <div class="col-4">
-                                <h1 class="h4 black2" id="panel-title"></h1>
+                                <h1 class="h4 black2" id="panel-title">Panel de administración</h1>
                             </div>
                             <div class="col-8">
                                 {% include 'auth/panel_components/mensajes_alertas.html' %}
